clusters/home/apps/sso/pocket-id/app/ingressroute.yml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: pocket-id
  namespace: pocket-id
  annotations:
    external-dns.alpha.kubernetes.io/enabled: "true"
    external-dns.alpha.kubernetes.io/hostname: "idp.layertwo.dev"
    external-dns.alpha.kubernetes.io/target: "proxy-external.layertwo.dev"
    cert-manager.io/cluster-issuer: letsencrypt-prod-dns
    kubernetes.io/ingress.class: external
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`idp.layertwo.dev`)
    kind: Rule
    services:
    - name: pocket-id
      port: 1411
